# hyper-resource-sanic

./: .env.template  .gitignore  TileBBox.sql  async_sqlalchamy_test.py  async_test.py  cartopy.txt  cartopy_test.py  geobuf-test.txt  hrcodegen.py  hyper-resource-operations  hyper-resource-operations.drawio  hyper-resource.asta  pessoa.json  poetry-dicas.txt  poetry.lock.old  pyproject.toml  readme.md  select-objects.txt  settings.py  setup.py  shapely_bd.py  shp_to_postgis.py  sqlalchamy_test.py  sqls.txt  temp.wkb
generator/: all_models.py  generate_all_files.py  generate_model_files.py  generate_static.py  generator_resource.py  generator_route.py  pre_generator.py
generator/templates/: geo_template.html  index_template.py
hyper_resource_sanic.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/: aiohttp_client.py  index.py  main.py
src/hyper_resource/: abstract_collection_resource.py  abstract_resource.py  basic_route.py  common_resource.py  feature_collection_resource.py  feature_resource.py  feature_utils.py  non_spatial_resource.py  spatial_collection_resource.py  spatial_resource.py  util.py
src/hyper_resource/context/: abstract_context.py  context_types.py  geocontext.py  geocontext_types.py  hyper-resource-vocabulary.drawio  hyper-resource.jsonld
src/hyper_resource/templates/: basic_geo.html
src/middlewares/: security.py
src/orm/: action_type.py  converter.py  database.py  database_postgis.py  database_postgresql.py  dictionary_actions.py  dictionary_actions_abstract_collection.py  dictionary_actions_abstract_resource.py  dictionary_actions_postgis.py  dictionary_actions_postgres.py  geo_models.py  models.py  query_builder.py
src/static/: lim_unidade_federacao_a.html
src/url_interpreter/: .~lock.state-machine.csv#  datatype.py  expression.py  interpreter.py  interpreter_new.py  interpreter_types.py  interpretertypes.py  token.py
tests/: hyper-resource-sanic.postman_collection.json  performance.xlsx  test_alchemy_base.py  test_context.py  test_expression.py  test_feature_collection.py  test_filter_expression.py  test_interpreter_new.py  test_requests.py  tests.txt
tests/contexts/: ferrovia.py  hidreletrica.py  terra_indigena.py  unidade_federacao.py
tests/db/: model.py
tests/models/: ferrovia.py  hidreletrica.py  terra_indigena.py  unidade_federacao.py
tests/resources/: ferrovia.py  hidreletrica.py  setup_resources.py  terra_indigena.py  unidade_federacao.py
tests/routes/: entry_point.py  ferrovia.py  hidreletrica.py  setup_routes.py  terra_indigena.py  unidade_federacao.py
