[tool.poetry]
name = "hyper-resource-sanic"
version = "0.1.0"
description = ""
authors = ["RogerioBorba <rogerio.borba17@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
sanic = "^20.6.3"
secure = "^0.2.1"
sanic-envconfig = "^1.3.3"
databases = {extras = ["postgresql"], version = "^0.3.2"}
sanic-openapi = "^0.6.2"
sqlacodegen = "^2.3.0"
environs = "^8.0.0"
sqlalchemy = "^1.3.19"
aiocontextvars = "^0.2.2"
contextvars = "^2.4"
GeoAlchemy2 = "^0.8.4"
pandas = "^1.1.5"

[tool.poetry.dev-dependencies]
pytest-asyncio = "^0.14.0"
pytest-trio = "^0.6.0"
pytest-tornasync = "^0.6.0"
pytest-twisted = "^1.13.2"
twisted = "^20.3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
