[tool.poetry]
name = "hyper-resource-sanic"
version = "0.1.0"
description = ""
authors = ["RogerioBorba <rogerio.borba17@gmail.com>", "gabrielcardoso95 <gabrielcardoso95@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6.9"
setuptools = "57.5.0"
uvloop = "0.14.0"
sanic = "^20.12.3"
secure = "^0.2.1"
sanic-envconfig = "^1.3.3"
databases = {extras = ["postgresql"], version = "^0.3.2"}
sanic-openapi = "^0.6.2"
sqlacodegen = "^2.3.0"
environs = "^8.0.0"
aiocontextvars = "^0.2.2"
contextvars = "^2.4"
pandas = "^1.1.1"
Sanic-Cors = "^0.10.0"
Twisted = "^20.3.0"
SQLAlchemy = "^1.4.26"
geobuf = "^1.1.1"
GeoAlchemy2 = "^0.9.4"
Shapely = "^1.8.0"
pyproj = "^3.0.1"
aiohttp = "^3.7.4"
matplotlib = "^3.3.4"
Cartopy = "^0.19.0"
pyepsg = "^0.4.0"
GDAL = "2.4.2"
xlrd = "^2.0.1"
openpyxl = "^3.0.7"
Fiona = "^1.8.20"
geopandas = "^0.9.0"

[tool.poetry.dev-dependencies]
pytest-asyncio = "^0.14.0"
pytest-trio = "^0.6.0"
pytest-tornasync = "^0.6.0"
pytest-twisted = "^1.13.2"
twisted = "^20.3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
